# identityService/src/main/java/com/inventalert/identityService/exception/WarehouseManagerConflictException.java
@@ -1,0 +1,7 @@
+package com.inventalert.identityService.exception;
+
+public class WarehouseManagerConflictException extends IdentityServiceException {
+    public WarehouseManagerConflictException(String warehouseId) {
+        super("Warehouse " + warehouseId + " already has an active manager assigned");
+    }
+}
